# neurobiomech_software

./: .gitignore  CMakeLists.txt  README.md  environment.yml
.github/workflows/: run_codecoverage.yml  run_tests.yml
WIP/: CMakeLists.txt  main_emg_delsys.cpp  main_emg_delsys_timings_test.cpp  main_rehastim.cpp
WIP/scienceMode2/: ScienceMode2.cpp  ScienceMode2.h  ScienceStim2_Demo_Linux.mdl  ScienceStim2_Demo_Windows.mdl  ScienceStim2_Help.html  ScienceStim2_Lib.mdl  WrapScienceMode2.cpp  WrapScienceMode2.h  compile_linux.m  compile_win.m  serial_linux.cpp  serial_linux.h  serial_windows.cpp  serial_windows.h  serialport.h  sfun_ScienceMode2.c
WIP/scienceMode2/documentation/: Simulink_ScienceMode2.odt
doc/: Doxyfile.in  contributing.md
include/: stimwalker.h  stimwalkerConfig.h.in
include/Devices/: DelsysEmgDevice.h  Lokomat.h  NidaqDevice.h  all.h
include/Devices/Data/: CollectorData.h  Data.h  DataCollection.h  StimulatorData.h
include/Devices/Generic/: Collector.h  Device.h  Exceptions.h  StimulatorDevice.h
include/Utils/: Benchmark.h  Exceptions.h  Path.h  String.h  Timer.h  Timestamp.h  all.h
src/: main.cpp
src/Devices/: CMakeLists.txt  DelsysEmgDevice.cpp  NidaqDevice.cpp
src/Devices/Data/: CollectorData.cpp  DataCollection.cpp
src/Utils/: Benchmark.cpp  CMakeLists.txt  Path.cpp  String.cpp  Timer.cpp  Timestamp.cpp
test/: CMakeLists.txt  test_data.cpp  test_devices.cpp  test_lokomat.cpp  test_utils.cpp
